--- a/lib/ionic/css/ionic.css
+++ b/lib/ionic/css/ionic.css
@@ -2475,6 +2475,7 @@ ion-infinite-scroll.active .scroll-infinite {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #fff;
   overflow: hidden; }
 
 /**
