--- a/styles/style.css
+++ b/styles/style.css
@@ -869,6 +869,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #8A6130;
     border-top: 1px solid #DBBABA;
+    width: 100%;
 }
 
 .view.theme-1 .error-bar {
@@ -1399,6 +1400,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #308A8A;
     border-top: 1px solid #72B2C2;
+    width: 100%;
 }
 
 .view.theme-2 .error-bar {
@@ -1967,6 +1969,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #ADA8A2;
     border-top: 1px solid #A27B7B;
+    width: 100%;
 }
 
 .view.theme-3 .error-bar {
@@ -2503,6 +2506,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #382D1F;
     border-top: 1px solid #857777;
+    width: 100%;
 }
 
 .view.theme-4 .error-bar {
@@ -3033,6 +3037,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #362C1F;
     border-top: 1px solid #6F4D4D;
+    width: 100%;
 }
 
 .view.theme-5 .error-bar {
@@ -3568,6 +3573,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #1F1D1C;
     border-top: 1px solid #756464;
+    width: 100%;
 }
 
 .view.theme-6 .error-bar {
@@ -4106,6 +4112,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #8B837E;
     border-top: 1px solid #EEC7C7;
+    width: 100%;
 }
 
 .view.theme-7 .error-bar {
@@ -4646,6 +4653,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #1F1D1C;
     border-top: 1px solid #756464;
+    width: 100%;
 }
 
 .view.theme-8 .error-bar {
@@ -5181,6 +5189,7 @@ body {
     font-size: 23px;
     border-bottom: 2px solid #1F1D1C;
     border-top: 1px solid #756464;
+    width: 100%;
 }
 
 .view.theme-9 .error-bar {
