--- a/styles/style.css
+++ b/styles/style.css
@@ -5234,3 +5234,7 @@ margin-top: 32%;
 border-radius: 50%;
 box-shadow: 2px 2px 5px 3px #000;
 }
+
+*:not(html) {
+    -webkit-transform: translate3d(0, 0, 0);
+}
