--- a/styles/style.css
+++ b/styles/style.css
@@ -32,12 +32,13 @@ body {
 .gallery-container-in {
     margin: 0 auto;
 }
+
 .splash-container {
     width: 100%;
     text-align: center;
 }
+
 .splash-loader {
-   
     width: 50px;
     height: 50px;
     position: relative;
@@ -64,16 +65,17 @@ body {
     margin: 0 auto;
     box-shadow: 2px 0px 4px 2px rgba(255, 255, 255, 0.31);
 }
-.splash-loader:after {
-    position:absolute;
-    top: 0px;
-    left: 3px;
-    content: "";
-    width:100%;
-    height:100%;
-    border-right: 5px solid rgb(221, 143, 143);
-    border-radius:50%;
-}
+
+    .splash-loader:after {
+        position: absolute;
+        top: 0px;
+        left: 3px;
+        content: "";
+        width: 100%;
+        height: 100%;
+        border-right: 5px solid rgb(221, 143, 143);
+        border-radius: 50%;
+    }
 
 @-ms-keyframes spin {
     from {
@@ -114,6 +116,7 @@ body {
         transform: rotate(360deg);
     }
 }
+
 .gallery-item {
     /*height: calc(50% - 4px);
     width: calc(50% - 4px);*/
@@ -353,6 +356,22 @@ body {
         margin: -6px 10px 16px -2px;
         float: left;
     }
+
+.push-bar {
+    position: relative;
+    z-index: 3;
+    display: block;
+    top: 44px;
+    background-color: #FAEFEF;
+    color: rgb(66, 38, 38);
+    padding: 6px 3px 7px 7px;
+    margin: 5px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+
 /********************************************themes********************************************/
 
 /***********************Theme- 1***********************/
@@ -433,6 +452,7 @@ body {
 
 .view.theme-1 .pane {
     background: #292929;
+    background-size: cover;
 }
 
 .view.theme-1 .bar.bar-assertive {
@@ -1495,6 +1515,7 @@ body {
 
 .view.theme-3 .pane {
     background: url(../images/theme-3/sponsors.jpg);
+    background-size: cover;
 }
 
 .view.theme-3 .bar.bar-assertive {
@@ -2066,6 +2087,7 @@ body {
 
 .view.theme-4 .pane {
     background: url(../images/theme-4/bg.jpg);
+    background-size: cover;
 }
 
 .view.theme-4 .bar.bar-assertive {
@@ -2596,6 +2618,7 @@ body {
 
 .view.theme-5 .pane {
     background: url(../images/theme-5/bg.jpg);
+    background-size: cover;
 }
 
 .view.theme-5 .bar.bar-assertive {
@@ -3135,7 +3158,7 @@ body {
     background: none;
 }
 
-.view.theme-6 .menu-left,  .view.theme-6 .menu-right{
+.view.theme-6 .menu-left, .view.theme-6 .menu-right {
     background: url(../images/theme-6/bg.jpg);
 }
 
@@ -5213,24 +5236,23 @@ body {
     padding-right: 5px;
 }
 
-.rtl .list-icon,  .rtl .list-name{
-     float: right !important;
+.rtl .list-icon, .rtl .list-name {
+    float: right !important;
     padding-right: 5px;
 }
 /**************************************.../theme-9************************************************************/
 
 .clientinfo .scroll-content {
     position: relative;
-
-    
 }
-.clientinfo-loader{
-content: '';
-width: 130px;
-height: 130px;
-background: rgba(0, 0, 0, 0.77) url(../images/logo3al.png) no-repeat center;
-margin: 0 auto;
-margin-top: 32%;
-border-radius: 50%;
-box-shadow: 2px 2px 5px 3px #000;
+
+.clientinfo-loader {
+    content: '';
+    width: 130px;
+    height: 130px;
+    background: rgba(0, 0, 0, 0.77) url(../images/logo3al.png) no-repeat center;
+    margin: 0 auto;
+    margin-top: 32%;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px 3px #000;
 }
